# starlette-sessions

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release-pypi.yml
src/starlette_sessions/: backend.py  base.py  constants.py  middleware.py
src/starlette_sessions/cookie/: backend.py  base.py
src/starlette_sessions/memory/: backend.py
src/starlette_sessions/redis/: backend.py
src/starlette_sessions/signedcookie/: backend.py
